--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -1,12 +1,9 @@
 name: test
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
-      - "*"
+      - "main"
 
 jobs:
   test:
