--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -1,3 +1,32 @@
+# name: test
+
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - "*"
+
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Check out repo code
+#         uses: actions/checkout@v3
+
+#       - name: Setup Python
+#         uses: actions/setup-python@v3
+#         with:
+#           python-version: "3.x"
+
+#       - name: Install Dependencies
+#         run: |
+#           python -m pip install -r requirements.txt
+#       - name: Run tests
+#         run: |
+#           python -m pytest -v tests
 name: test
 
 on:
@@ -24,6 +53,12 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install -r requirements.txt
+
       - name: Run tests
         run: |
           python -m pytest -v tests
+          
+      - name: Upload coverage to Codecov
+        run: |
+          python -m pip install codecov
+          codecov
