--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -27,7 +27,10 @@ jobs:
       - name: Run tests
         run: |
           python -m pytest -v tests
-          
-      - name: Pytest Coverage Comment
-        uses: MishaKav/pytest-coverage-comment@v1.1.48
+
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: ./pytest-coverage.txt
+          junitxml-path: ./pytest.xml
       
