Add coverage report

--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -24,12 +24,16 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install -r requirements.txt
+
       - name: Run tests
         run: |
           python -m pytest -v tests
 
-      - name: Pytest coverage comment
+      - name: Run test coverage
+        run: |
+          python -m pytest --cov=tests --cov-report xml:coverage.xml
+
+      - name: Pytest coverage report
         uses: MishaKav/pytest-coverage-comment@main
         with:
-          pytest-coverage-path: ./pytest-coverage.txt
-          junitxml-path: ./pytest.xml
+          pytest-coverage-path: ./coverage.xml
