--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -23,7 +23,24 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          pip install flake8 pytest pytest-cov
           python -m pip install -r requirements.txt
+          
       - name: Run tests
         run: |
           python -m pytest -v tests
+          
+      - name: Build coverage file
+        run: |
+          pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
+
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: ./pytest-coverage.txt
+          junitxml-path: ./pytest.xml
+
+
+
+
+        
