--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -25,10 +25,10 @@ jobs:
         run: |
           pip install flake8 pytest pytest-cov
           python -m pip install -r requirements.txt
-          
-      - name: Run tests
+
+      - name: Run tests and build coverage
         run: |
-          python -m pytest -v tests
+         python -m pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=tests -v tests/ | tee pytest-coverage.txt
           
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
