--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -23,12 +23,12 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install flake8 pytest pytest-cov
           python -m pip install -r requirements.txt
 
       - name: Run tests and build coverage
         run: |
-         python -m pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=tests -v tests/ | tee pytest-coverage.txt
+         python -m pytest -v tests
+         pytest --cov tests/ --cov-report html 
           
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
