--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -27,8 +27,7 @@ jobs:
 
       - name: Run tests and build coverage
         run: |
-         python -m pytest -v tests
-         pytest --cov tests/ --cov-report html 
+         python -m pytest -v tests --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=tests / | tee pytest-coverage.txt
           
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
