--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -24,6 +24,13 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install -r requirements.txt
-      - name: Run tests
+
+      - name: Run tests with coverage
         run: |
-          python -m pytest -v tests
+          python -m pytest -v --cov=src --cov-report=xml tests/
+
+      - name: Pytest Coverage Comment
+        uses: larsoner/pytest-cov-comment@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          coverage-path: coverage.xml
