--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -30,7 +30,7 @@ jobs:
           python -m pytest -v --cov=src --cov-report=xml tests/
 
       - name: Pytest Coverage Comment
-        uses: AbdullahMu/pytest-cov-comment@v1
+        uses: AbdullahMu/week1-devops@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           coverage-path: coverage.xml
