feat: pytest-cov report added to CI/CD

--- a/.github/workflows/ci_cd_wf.yml
+++ b/.github/workflows/ci_cd_wf.yml
@@ -32,4 +32,6 @@ jobs:
       - name: Pytest Coverage Comment
         uses: codecov/codecov-action@v3
         with:
-          coverage-path: coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.xml
+          fail_ci_if_error: true
